--- a/heart Disease/Heart_Disease_Complete_Project_Chatgpt.ipynb
+++ b/heart Disease/Heart_Disease_Complete_Project_Chatgpt.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8d95e508",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bd689db5",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
        "4   0     2       1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "df2e32b7",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,7 @@
        "       dtype='object'))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d69d1847",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f51fe340",
    "metadata": {},
    "outputs": [
@@ -495,7 +495,7 @@
        "max      3.000000    1.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5e70a498",
    "metadata": {},
    "outputs": [
@@ -531,7 +531,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "2beae709",
    "metadata": {},
    "outputs": [
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "ad7dae48",
    "metadata": {},
    "outputs": [
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "346030ec",
    "metadata": {},
    "outputs": [],
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "cb89c187",
    "metadata": {},
    "outputs": [
@@ -647,7 +647,7 @@
      "output_type": "stream",
      "text": [
       "Logistic Regression Accuracy: 0.8525\n",
-      "Random Forest Accuracy: 0.8197\n",
+      "Random Forest Accuracy: 0.8525\n",
       "K-Nearest Neighbors Accuracy: 0.9180\n"
      ]
     }
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "499e7da5",
    "metadata": {},
    "outputs": [
@@ -740,6 +740,33 @@
     "\n",
     "---  \n",
     "**End of Notebook**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f2dffdfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['scaler.pkl']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "# Save your trained model\n",
+    "joblib.dump(model, 'heart_model.pkl')\n",
+    "\n",
+    "# Save your scaler too, if you're using StandardScaler\n",
+    "joblib.dump(scaler, 'scaler.pkl')\n"
    ]
   }
  ],
