--- a/diabetes_prediction/Model.ipynb
+++ b/diabetes_prediction/Model.ipynb
@@ -923,7 +923,11 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "print(classification_report(Y_test, Y_pred))\n"
+   ]
   },
   {
    "cell_type": "code",
