--- a/fraud_detection/model.ipynb
+++ b/fraud_detection/model.ipynb
@@ -1,5 +1,16 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a302846",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fd"
+   ]
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python"
