--- a/fraud_detection/model.ipynb
+++ b/fraud_detection/model.ipynb
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "05a252c2",
    "metadata": {},
    "outputs": [
@@ -1237,7 +1237,7 @@
     }
    ],
    "source": [
-    "#train_np,test_np,val_np = train.to_numpy(), test.to_numpy(),val.to_numpy()  already done so normal way now\n",
+    "#train_np,test_np,val_np = train.to_numpy(), test.to_numpy(),val.to_numpy()  already done so normal way now .\n",
     "train_np,test_np,val_np = train,test,val\n",
     "train_np.shape,test_np.shape,val_np.shape"
    ]
