--- a/heart_disease/Heart_Disease_Complete_Project_Chatgpt.ipynb
+++ b/heart_disease/Heart_Disease_Complete_Project_Chatgpt.ipynb
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "f2dffdfc",
    "metadata": {},
    "outputs": [
@@ -763,7 +763,7 @@
    "source": [
     "import joblib\n",
     "\n",
-    "# Save your trained model\n",
+    "# Save your trained model .\n",
     "joblib.dump(model, 'heart_model.pkl')\n",
     "\n",
     "# Save your scaler too, if you're using StandardScaler\n",
