--- a/Cancer_prediction/model.ipynb
+++ b/Cancer_prediction/model.ipynb
@@ -684,12 +684,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "98319ecd",
+   "metadata": {},
+   "source": [
+    "Model Training Begins"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7f6bb7e9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X = df."
+   ]
   }
  ],
  "metadata": {
