--- a/Cancer_prediction/model.ipynb
+++ b/Cancer_prediction/model.ipynb
@@ -693,13 +693,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "7f6bb7e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df."
+    "X = df.drop('diagnosis',axis = 1)\n",
+    "y = df['diagnosis']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5afd4660",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
