--- a/Cancer_prediction/model.ipynb
+++ b/Cancer_prediction/model.ipynb
@@ -693,19 +693,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "7f6bb7e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df.drop('diagnosis',axis = 1)\n",
+    "X = df.drop(['diagnosis'],axis = 1)\n",
     "y = df['diagnosis']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5afd4660",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      Axes(0.125,0.11;0.775x0.77)\n",
+       "1      Axes(0.125,0.11;0.775x0.77)\n",
+       "2      Axes(0.125,0.11;0.775x0.77)\n",
+       "3      Axes(0.125,0.11;0.775x0.77)\n",
+       "4      Axes(0.125,0.11;0.775x0.77)\n",
+       "                  ...             \n",
+       "564    Axes(0.125,0.11;0.775x0.77)\n",
+       "565    Axes(0.125,0.11;0.775x0.77)\n",
+       "566    Axes(0.125,0.11;0.775x0.77)\n",
+       "567    Axes(0.125,0.11;0.775x0.77)\n",
+       "568    Axes(0.125,0.11;0.775x0.77)\n",
+       "Name: diagnosis, Length: 569, dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be4f970b",
    "metadata": {},
    "outputs": [],
    "source": []
