--- a/Cancer_prediction/model.ipynb
+++ b/Cancer_prediction/model.ipynb
@@ -715,9 +715,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d49f7901",
+   "metadata": {},
+   "source": [
+    "Normalizing the Data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "be4f970b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be4f970b",
+   "id": "483c94e6",
    "metadata": {},
    "outputs": [],
    "source": []
