--- a/Cancer_prediction/model.ipynb
+++ b/Cancer_prediction/model.ipynb
@@ -736,12 +736,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a4fb0f8",
+   "metadata": {},
+   "source": [
+    "Split the data "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "483c94e6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train,X_test,Y_train,Y_test = train_test_split(X_scaled,y,test_size=0.2,random_state=42)"
+   ]
   }
  ],
  "metadata": {
