--- a/Cancer_prediction/model.ipynb
+++ b/Cancer_prediction/model.ipynb
@@ -756,13 +756,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "09c383fb",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
-    "lr = LogisticRegression()"
+    "lr = LogisticRegression()\n",
+    "\n",
+    "lr.fit(X_train,Y_train)\n",
+    "\n",
+    "Y_pred = lr.predict(X_test)\n",
+    "\n"
    ]
   },
   {
