--- a/Cancer_prediction/model.ipynb
+++ b/Cancer_prediction/model.ipynb
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "09c383fb",
    "metadata": {},
    "outputs": [],
@@ -766,8 +766,15 @@
     "\n",
     "lr.fit(X_train,Y_train)\n",
     "\n",
-    "Y_pred = lr.predict(X_test)\n",
-    "\n"
+    "Y_pred = lr.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbe128eb",
+   "metadata": {},
+   "source": [
+    "Evaluate"
    ]
   },
   {
@@ -775,8 +782,29 @@
    "execution_count": null,
    "id": "f7776dc3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:0.98\n",
+      "classification_report:               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      0.98      0.99       108\n",
+      "           1       0.97      0.98      0.98        63\n",
+      "\n",
+      "    accuracy                           0.98       171\n",
+      "   macro avg       0.98      0.98      0.98       171\n",
+      "weighted avg       0.98      0.98      0.98       171\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
+    "Accuracy =  accuracy_score(Y_test, Y_pred)\n",
+    "print(f\"Accuracy:{Accuracy:.2f}\")"
+   ]
   },
   {
    "cell_type": "code",
