--- a/Cancer_prediction/model.ipynb
+++ b/Cancer_prediction/model.ipynb
@@ -808,8 +808,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "689a0180",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "classification_report:               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      0.98      0.99       108\n",
+      "           1       0.97      0.98      0.98        63\n",
+      "\n",
+      "    accuracy                           0.98       171\n",
+      "   macro avg       0.98      0.98      0.98       171\n",
+      "weighted avg       0.98      0.98      0.98       171\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"classification_report:\",classification_report(Y_test, Y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0c691b4",
    "metadata": {},
    "outputs": [],
    "source": []
