--- a/stock_prediction/model.ipynb
+++ b/stock_prediction/model.ipynb
@@ -2,20 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "7813d8d1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import yfinance as yf\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "28a516df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "\n",
+      "1 Failed download:\n",
+      "['GOOG']: YFRateLimitError('Too Many Requests. Rate limited. Try after a while.')\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25a819e2",
    "metadata": {},
    "outputs": [],
    "source": []
