--- a/stock_prediction/model.ipynb
+++ b/stock_prediction/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7813d8d1",
    "metadata": {},
    "outputs": [],
@@ -10,34 +10,138 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import yfinance as yf\n"
+    "from alpha_vantage.timeseries import TimeSeries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "28a516df",
+   "execution_count": 7,
+   "id": "25a819e2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "\n",
-      "1 Failed download:\n",
-      "['GOOG']: YFRateLimitError('Too Many Requests. Rate limited. Try after a while.')\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015-01-02</td>\n",
+       "      <td>529.01</td>\n",
+       "      <td>531.270</td>\n",
+       "      <td>524.10</td>\n",
+       "      <td>524.81</td>\n",
+       "      <td>1446662.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015-01-05</td>\n",
+       "      <td>523.26</td>\n",
+       "      <td>524.330</td>\n",
+       "      <td>513.06</td>\n",
+       "      <td>513.87</td>\n",
+       "      <td>2054238.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015-01-06</td>\n",
+       "      <td>515.00</td>\n",
+       "      <td>516.175</td>\n",
+       "      <td>501.05</td>\n",
+       "      <td>501.96</td>\n",
+       "      <td>2891950.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2015-01-07</td>\n",
+       "      <td>507.00</td>\n",
+       "      <td>507.244</td>\n",
+       "      <td>499.65</td>\n",
+       "      <td>501.10</td>\n",
+       "      <td>2059366.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015-01-08</td>\n",
+       "      <td>497.99</td>\n",
+       "      <td>503.480</td>\n",
+       "      <td>491.00</td>\n",
+       "      <td>502.68</td>\n",
+       "      <td>3344395.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Date    open     high     low   close     volume\n",
+       "0 2015-01-02  529.01  531.270  524.10  524.81  1446662.0\n",
+       "1 2015-01-05  523.26  524.330  513.06  513.87  2054238.0\n",
+       "2 2015-01-06  515.00  516.175  501.05  501.96  2891950.0\n",
+       "3 2015-01-07  507.00  507.244  499.65  501.10  2059366.0\n",
+       "4 2015-01-08  497.99  503.480  491.00  502.68  3344395.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n"
+    "api_key = 'GZ6PMA77OKTY8X96'\n",
+    "# Initializing\n",
+    "ts = TimeSeries(key=api_key, output_format='pandas')\n",
+    "\n",
+    "# Fetching full daily historical data\n",
+    "data, meta_data = ts.get_daily(symbol='GOOG', outputsize='full')\n",
+    "\n",
+    "# Converting index to datetime\n",
+    "data.index = pd.to_datetime(data.index)\n",
+    "data = data.sort_index()\n",
+    "filtered_data = data.loc[\"2015-01-01\":\"2025-07-14\"]\n",
+    "\n",
+    "filtered_data = filtered_data.rename(columns={\n",
+    "    '1. open': 'open',\n",
+    "    '2. high': 'high',\n",
+    "    '3. low': 'low',\n",
+    "    '4. close': 'close',\n",
+    "    '5. volume': 'volume'\n",
+    "})\n",
+    "\n",
+    "# Reset index to have 'Date' as a column\n",
+    "filtered_data = filtered_data.reset_index().rename(columns={'date': 'Date'})\n",
+    "filtered_data.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25a819e2",
+   "id": "244c767f",
    "metadata": {},
    "outputs": [],
    "source": []
