--- a/stock_prediction/model.ipynb
+++ b/stock_prediction/model.ipynb
@@ -15,101 +15,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "25a819e2",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>open</th>\n",
-       "      <th>high</th>\n",
-       "      <th>low</th>\n",
-       "      <th>close</th>\n",
-       "      <th>volume</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2015-01-02</td>\n",
-       "      <td>111.39</td>\n",
-       "      <td>111.44</td>\n",
-       "      <td>107.350</td>\n",
-       "      <td>109.33</td>\n",
-       "      <td>53204626.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2015-01-05</td>\n",
-       "      <td>108.29</td>\n",
-       "      <td>108.65</td>\n",
-       "      <td>105.410</td>\n",
-       "      <td>106.25</td>\n",
-       "      <td>64285491.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2015-01-06</td>\n",
-       "      <td>106.54</td>\n",
-       "      <td>107.43</td>\n",
-       "      <td>104.630</td>\n",
-       "      <td>106.26</td>\n",
-       "      <td>65797116.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2015-01-07</td>\n",
-       "      <td>107.20</td>\n",
-       "      <td>108.20</td>\n",
-       "      <td>106.695</td>\n",
-       "      <td>107.75</td>\n",
-       "      <td>40105934.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2015-01-08</td>\n",
-       "      <td>109.23</td>\n",
-       "      <td>112.15</td>\n",
-       "      <td>108.700</td>\n",
-       "      <td>111.89</td>\n",
-       "      <td>59364547.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Date    open    high      low   close      volume\n",
-       "0 2015-01-02  111.39  111.44  107.350  109.33  53204626.0\n",
-       "1 2015-01-05  108.29  108.65  105.410  106.25  64285491.0\n",
-       "2 2015-01-06  106.54  107.43  104.630  106.26  65797116.0\n",
-       "3 2015-01-07  107.20  108.20  106.695  107.75  40105934.0\n",
-       "4 2015-01-08  109.23  112.15  108.700  111.89  59364547.0"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2647 entries, 0 to 2646\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column  Non-Null Count  Dtype         \n",
+      "---  ------  --------------  -----         \n",
+      " 0   Date    2647 non-null   datetime64[ns]\n",
+      " 1   open    2647 non-null   float64       \n",
+      " 2   high    2647 non-null   float64       \n",
+      " 3   low     2647 non-null   float64       \n",
+      " 4   close   2647 non-null   float64       \n",
+      " 5   volume  2647 non-null   float64       \n",
+      "dtypes: datetime64[ns](1), float64(5)\n",
+      "memory usage: 124.2 KB\n"
+     ]
     }
    ],
    "source": [
@@ -137,7 +64,8 @@
     "\n",
     "# Reset index to have 'Date' as a column\n",
     "dataa = dataa.reset_index().rename(columns={'date': 'Date'})\n",
-    "dataa.head()"
+    "dataa.head()\n",
+    "dataa.info()"
    ]
   },
   {
@@ -202,8 +130,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "d1cacc26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data = dataa.close[0:int(len(dataa) * 0.8)]\n",
+    "train_data = dataa.close[int(len(dataa) * 0.8):]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f986ac18",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2117, 530)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data.shape[0], train_data.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bba3eab9",
    "metadata": {},
    "outputs": [],
    "source": []
