--- a/stock_prediction/model.ipynb
+++ b/stock_prediction/model.ipynb
@@ -166,7 +166,10 @@
    "id": "bba3eab9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "scaler = MinMaxScaler(feature_range=(0, 1))"
+   ]
   }
  ],
  "metadata": {
