--- a/stock_prediction/model.ipynb
+++ b/stock_prediction/model.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "25a819e2",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "244c767f",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "3aa0a5ba",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "c9fd9a2b",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "d1cacc26",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "f986ac18",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
        "(2117, 530)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "bba3eab9",
    "metadata": {},
    "outputs": [],
@@ -170,6 +170,24 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "scaler = MinMaxScaler(feature_range=(0, 1))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c837fe68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data_scaled = scaler.fit_transform(np.array(train_data).reshape (-1, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41a477cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
