--- a/stock_prediction/model.ipynb
+++ b/stock_prediction/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7813d8d1",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,17 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_percentage_error\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import LSTM, Dropout, Dense\n",
     "from alpha_vantage.timeseries import TimeSeries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "25a819e2",
    "metadata": {},
    "outputs": [
@@ -64,8 +69,7 @@
     "\n",
     "# Reset index to have 'Date' as a column\n",
     "dataa = dataa.reset_index().rename(columns={'date': 'Date'})\n",
-    "dataa.head()\n",
-    "dataa.info()"
+    "dataa.head()\n"
    ]
   },
   {
