--- a/stock_prediction/model.ipynb
+++ b/stock_prediction/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7813d8d1",
    "metadata": {},
    "outputs": [],
@@ -20,28 +20,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "25a819e2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2647 entries, 0 to 2646\n",
-      "Data columns (total 6 columns):\n",
-      " #   Column  Non-Null Count  Dtype         \n",
-      "---  ------  --------------  -----         \n",
-      " 0   Date    2647 non-null   datetime64[ns]\n",
-      " 1   open    2647 non-null   float64       \n",
-      " 2   high    2647 non-null   float64       \n",
-      " 3   low     2647 non-null   float64       \n",
-      " 4   close   2647 non-null   float64       \n",
-      " 5   volume  2647 non-null   float64       \n",
-      "dtypes: datetime64[ns](1), float64(5)\n",
-      "memory usage: 124.2 KB\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015-01-02</td>\n",
+       "      <td>111.39</td>\n",
+       "      <td>111.44</td>\n",
+       "      <td>107.350</td>\n",
+       "      <td>109.33</td>\n",
+       "      <td>53204626.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015-01-05</td>\n",
+       "      <td>108.29</td>\n",
+       "      <td>108.65</td>\n",
+       "      <td>105.410</td>\n",
+       "      <td>106.25</td>\n",
+       "      <td>64285491.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015-01-06</td>\n",
+       "      <td>106.54</td>\n",
+       "      <td>107.43</td>\n",
+       "      <td>104.630</td>\n",
+       "      <td>106.26</td>\n",
+       "      <td>65797116.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2015-01-07</td>\n",
+       "      <td>107.20</td>\n",
+       "      <td>108.20</td>\n",
+       "      <td>106.695</td>\n",
+       "      <td>107.75</td>\n",
+       "      <td>40105934.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015-01-08</td>\n",
+       "      <td>109.23</td>\n",
+       "      <td>112.15</td>\n",
+       "      <td>108.700</td>\n",
+       "      <td>111.89</td>\n",
+       "      <td>59364547.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Date    open    high      low   close      volume\n",
+       "0 2015-01-02  111.39  111.44  107.350  109.33  53204626.0\n",
+       "1 2015-01-05  108.29  108.65  105.410  106.25  64285491.0\n",
+       "2 2015-01-06  106.54  107.43  104.630  106.26  65797116.0\n",
+       "3 2015-01-07  107.20  108.20  106.695  107.75  40105934.0\n",
+       "4 2015-01-08  109.23  112.15  108.700  111.89  59364547.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -74,7 +147,220 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
+   "id": "2e8859df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = ['open', 'high', 'low', 'close', 'volume']\n",
+    "target_column = 'close'\n",
+    "data_target = dataa[features]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "f675bc3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_size = int(len(data_target) * 0.8)\n",
+    "train_data = data_target[:training_size]\n",
+    "test_data = data_target[training_size:]\n",
+    "\n",
+    "scaler = MinMaxScaler(feature_range=(0, 1))\n",
+    "scaled_train = scaler.fit_transform(train_data)\n",
+    "\n",
+    "last_100_train = train_data.tail(100)\n",
+    "combined_data = pd.concat([last_100_train, test_data], ignore_index=True)\n",
+    "scaled_combined = scaler.transform(combined_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "75005d5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_sequences(data, window_size=100):\n",
+    "    X, y = [], []\n",
+    "    for i in range(window_size, len(data)):\n",
+    "        X.append(data[i - window_size:i, 0])\n",
+    "        y.append(data[i, 0])\n",
+    "    return np.array(X), np.array(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "9428a65f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, y_train = create_sequences(scaled_train)\n",
+    "X_test, y_test = create_sequences(scaled_test)\n",
+    "\n",
+    "X_train = X_train.reshape((X_train.shape[0], X_train.shape[1], 1))\n",
+    "X_test = X_test.reshape((X_test.shape[0], X_test.shape[1], 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "dd434c24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\devg7\\anaconda3\\envs\\myenv\\lib\\site-packages\\keras\\src\\layers\\rnn\\rnn.py:200: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(**kwargs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Sequential([\n",
+    "    LSTM(128, return_sequences=True, input_shape=(100, 1)),\n",
+    "    Dropout(0.3),\n",
+    "    LSTM(128, return_sequences=True),\n",
+    "    Dropout(0.3),\n",
+    "    LSTM(64),\n",
+    "    Dropout(0.3),\n",
+    "    Dense(1)\n",
+    "])\n",
+    "\n",
+    "model.compile(optimizer='adam', loss='mean_squared_error')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "dfbcec50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "\u001b[1m64/64\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 212ms/step - loss: 0.0031\n",
+      "Epoch 2/50\n",
+      "\u001b[1m64/64\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 211ms/step - loss: 0.0031\n",
+      "Epoch 3/50\n",
+      "\u001b[1m64/64\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 216ms/step - loss: 0.0021\n",
+      "Epoch 4/50\n",
+      "\u001b[1m64/64\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 213ms/step - loss: 0.0019\n",
+      "Epoch 5/50\n",
+      "\u001b[1m64/64\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 214ms/step - loss: 0.0018\n",
+      "Epoch 6/50\n",
+      "\u001b[1m64/64\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 211ms/step - loss: 0.0012\n",
+      "Epoch 7/50\n",
+      "\u001b[1m64/64\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m13s\u001b[0m 207ms/step - loss: 0.0045\n",
+      "Epoch 8/50\n",
+      "\u001b[1m64/64\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m13s\u001b[0m 206ms/step - loss: 0.0027\n",
+      "Epoch 9/50\n",
+      "\u001b[1m64/64\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 213ms/step - loss: 0.0022\n",
+      "Epoch 10/50\n",
+      "\u001b[1m64/64\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m15s\u001b[0m 233ms/step - loss: 0.0020\n",
+      "Epoch 11/50\n",
+      "\u001b[1m64/64\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m13s\u001b[0m 202ms/step - loss: 0.0014\n",
+      "Epoch 12/50\n",
+      "\u001b[1m64/64\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 218ms/step - loss: 0.0014\n",
+      "Epoch 13/50\n",
+      "\u001b[1m64/64\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 217ms/step - loss: 0.0022\n",
+      "Epoch 14/50\n",
+      "\u001b[1m64/64\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 218ms/step - loss: 0.0013\n",
+      "Epoch 15/50\n",
+      "\u001b[1m64/64\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 218ms/step - loss: 0.0011\n",
+      "Epoch 16/50\n",
+      "\u001b[1m64/64\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 213ms/step - loss: 0.0019\n",
+      "Epoch 17/50\n",
+      "\u001b[1m64/64\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 217ms/step - loss: 0.0013\n"
+     ]
+    }
+   ],
+   "source": [
+    "early_stop = tf.keras.callbacks.EarlyStopping(monitor='loss', patience=5, restore_best_weights=True)\n",
+    "history = model.fit(X_train, y_train, epochs=50, batch_size=32, callbacks=[early_stop])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "c1a641e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m17/17\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 110ms/step\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "non-broadcastable output operand with shape (530,1) doesn't match the broadcast shape (530,5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[35], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m predictions \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mpredict(X_test)\n\u001b[1;32m----> 2\u001b[0m predictions \u001b[38;5;241m=\u001b[39m \u001b[43mscaler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minverse_transform\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpredictions\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m y_test_actual \u001b[38;5;241m=\u001b[39m scaler\u001b[38;5;241m.\u001b[39minverse_transform(y_test\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m))\n",
+      "File \u001b[1;32mc:\\Users\\devg7\\anaconda3\\envs\\myenv\\lib\\site-packages\\sklearn\\preprocessing\\_data.py:581\u001b[0m, in \u001b[0;36mMinMaxScaler.inverse_transform\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    571\u001b[0m xp, _ \u001b[38;5;241m=\u001b[39m get_namespace(X)\n\u001b[0;32m    573\u001b[0m X \u001b[38;5;241m=\u001b[39m check_array(\n\u001b[0;32m    574\u001b[0m     X,\n\u001b[0;32m    575\u001b[0m     copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcopy,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    578\u001b[0m     ensure_all_finite\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mallow-nan\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    579\u001b[0m )\n\u001b[1;32m--> 581\u001b[0m X \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmin_\n\u001b[0;32m    582\u001b[0m X \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mscale_\n\u001b[0;32m    583\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m X\n",
+      "\u001b[1;31mValueError\u001b[0m: non-broadcastable output operand with shape (530,1) doesn't match the broadcast shape (530,5)"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = model.predict(X_test)\n",
+    "predictions = scaler.inverse_transform(predictions)\n",
+    "y_test_actual = scaler.inverse_transform(y_test.reshape(-1, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b940c8b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ RMSE: 115.61\n",
+      "✅ MAPE: 55.25%\n"
+     ]
+    }
+   ],
+   "source": [
+    "rmse = np.sqrt(mean_squared_error(y_test_actual, predictions))\n",
+    "mape = mean_absolute_percentage_error(y_test_actual, predictions) * 100\n",
+    "print(f\"✅ RMSE: {rmse:.2f}\")\n",
+    "print(f\"✅ MAPE: {mape:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12abcc59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(y_test_actual, label='Actual Price', color='lime')\n",
+    "plt.plot(predictions, label='Predicted Price', color='red')\n",
+    "plt.title(\"Actual vs Predicted Stock Price\")\n",
+    "plt.xlabel(\"Time Steps\")\n",
+    "plt.ylabel(\"Stock Price\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "244c767f",
    "metadata": {},
    "outputs": [],
@@ -84,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3aa0a5ba",
    "metadata": {},
    "outputs": [
@@ -108,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c9fd9a2b",
    "metadata": {},
    "outputs": [
@@ -134,64 +420,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "d1cacc26",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_data = dataa.close[0:int(len(dataa) * 0.8)]\n",
-    "train_data = dataa.close[int(len(dataa) * 0.8):]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "f986ac18",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2117, 530)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_data.shape[0], train_data.shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "bba3eab9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "scaler = MinMaxScaler(feature_range=(0, 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "c837fe68",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data_scaled = scaler.fit_transform(np.array(train_data).reshape (-1, 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "41a477cc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.save(\"Stock Predictions Model.keras\")\n",
+    "print(\"✅ Final model saved as 'Stock Predictions Model.keras'\")"
+   ]
   }
  ],
  "metadata": {
