--- a/stock_prediction/model.ipynb
+++ b/stock_prediction/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7813d8d1",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,8 @@
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import LSTM, Dropout, Dense\n",
-    "from alpha_vantage.timeseries import TimeSeries"
+    "from alpha_vantage.timeseries import TimeSeries\n",
+    "import os"
    ]
   },
   {
